Fix X button on mobile to be visible

--- a/static/sass/_patterns_maas_modal.scss
+++ b/static/sass/_patterns_maas_modal.scss
@@ -97,7 +97,7 @@ $color-modal-controls: rgba($color-x-dark, .2);
     width: 2rem;
 
     @media screen and (max-width: $breakpoint-medium) {
-      background-position: top 20px right 20px;
+      background-position: top 1rem right 1rem;
     }
   }
 
